Add simplified JDK-8334475 repro